--- a/.authcar.yml
+++ b/.authcar.yml
@@ -17,11 +17,8 @@ roles:
       Authorization: f1h6lVxxxxxxxxxxxxxxxxxxkIo3
 
 routers:
-  - pattern: /api/*action
+  - pattern: /api
     upstream:
       address: http://localhost:9312
       headers:
         Authorization: f1h6lVxxxxxxxxxxxxxxxxxxxxxXJkIo3
-  - pattern: /apiv2/otherservice/*action
-    upstream:
-      address: http://localhost:8081
