--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,13 +3,13 @@ before:
   hooks:
     - go mod download
 builds:
-  - id: goubase
+  - id: moreu
     main: ./main.go
     ldflags:
       - -s -w
-      - -X github.com/saltbo/goubase/cmd.release={{.Version}}
-      - -X github.com/saltbo/goubase/cmd.commit={{.Commit}}
-      - -X github.com/saltbo/goubase/cmd.repo={{.GitURL}}
+      - -X github.com/saltbo/moreu/cmd.release={{.Version}}
+      - -X github.com/saltbo/moreu/cmd.commit={{.Commit}}
+      - -X github.com/saltbo/moreu/cmd.repo={{.GitURL}}
     env:
       - CGO_ENABLED=0
     goos:
@@ -41,7 +41,7 @@ changelog:
 dockers:
   -
     binaries:
-      - goubase
+      - moreu
     image_templates:
       - "saltbo/{{.ProjectName}}:{{ .Tag }}"
       - "saltbo/{{.ProjectName}}:latest"
