--- a/roles.yml
+++ b/roles.yml
@@ -1,42 +1,27 @@
-# 允许所有的匿名读
+# 默认规则，只有正式成员允许访问
 - id: 0
   host: '*'
   path: '**'
-  method: '{GET}'
+  method: '*'
   authorized_roles:
-    - '*'
+    - 'member'
   forbidden_roles:
     - black_user
-  allow_anyone: false
 
-# 只有管理员和成员才能执行新增和修改操作
+# 默认规则，只有管理员允许查询用户列表
 - id: 1
   host: '*'
-  path: '**'
-  method: '{POST,PUT}'
+  path: '/moreu/api/users'
+  method: '{GET}'
   authorized_roles:
-    - admin
-    - member
+    - 'admin'
   forbidden_roles:
     - black_user
-  allow_anyone: false
 
-# 只有管理员拥有删除权限
-- id: 2
-  host: '*'
-  path: '**'
-  method: '{DELETE}'
-  authorized_roles:
-    - admin
-  forbidden_roles:
-  allow_anyone: false
-
-# 只有管理员可以新增和删除应用
+# 自定义规则
+# POST /api/files/callback 允许非登录状态访问
 - id: 3
   host: '*'
-  path: '/api/apps'
-  method: '{POST,PUT}'
-  authorized_roles:
-    - admin
-  forbidden_roles:
-  allow_anyone: false
+  path: '/api/files/callback'
+  method: '{POST}'
+  allow_anyone: true
