--- a/roles.yml
+++ b/roles.yml
@@ -19,9 +19,21 @@
     - black_user
 
 # 自定义规则
-# POST /api/files/callback 允许非登录状态访问
+# POST /api/files 允许非登录状态访问
 - id: 3
   host: '*'
-  path: '/api/files/callback'
-  method: '{POST}'
+  path: '/api/files'
+  method: '{GET,POST}'
+  allow_anyone: true
+
+- id: 4
+  host: '*'
+  path: '/s/**'
+  method: '{GET}'
+  allow_anyone: true
+
+- id: 5
+  host: '*'
+  path: '/api/shares/**'
+  method: '{GET}'
   allow_anyone: true
