--- a/.moreu.yml
+++ b/.moreu.yml
@@ -1,5 +1,5 @@
 host: http://inlets.saltbo.cn/
-moreu: ../moreu-front/dist
+#moreu: ../moreu-front/dist
 secret: 1111
 
 email:
@@ -13,10 +13,10 @@ database:
   dsn: root:admin@(localhost:3306)/moreu?charset=utf8&parseTime=True&loc=Local
 
 routers:
-  - pattern: /api
+  - pattern: /
     upstream:
       address: http://localhost:8222
 
-statics:
-  - pattern: /
-    distDir: ../zpan-front/dist
+#statics:
+#  - pattern: /
+#    distDir: ../zpan-front/dist
