--- a/.moreu.yml
+++ b/.moreu.yml
@@ -9,8 +9,12 @@ email:
   password: mG077URe2Wh9
 
 database:
-  driver: mysql
-  dsn: root:admin@(localhost:3306)/moreu?charset=utf8&parseTime=True&loc=Local
+  driver: sqlite3
+  dsn: moreu.db
+
+#database:
+#  driver: mysql
+#  dsn: root:admin@(localhost:3306)/moreu?charset=utf8&parseTime=True&loc=Local
 
 routers:
   - pattern: /
