--- a/.moreu.yml
+++ b/.moreu.yml
@@ -1,13 +1,13 @@
 debug: false
-secret: 8A4N3MFhnxXb4SnrJhnRzDPYULRm66nt
-invitation: true
+secret: 8A4N3xxxxxxxxxxxxxxm66nt
+invitation: false
 #moreuRoot: / # 前端目录，如果定义则优先使用该目录下的前端文件，否则使用内置的前端页面
 
-email:
-  host: smtpdm.aliyun.com:25
-  sender: no-reply@saltbo.fun
-  username: Moreu
-  password: mG077URe2Wh9
+#email:
+#  host: smtpdm.aliyun.com:25
+#  sender: no-reply@saltbo.fun
+#  username: Moreu
+#  password: mG0xxxxxxWh9
 
 database:
   driver: mysql
